Fixing Some Bugs

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,16 +27,6 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="mx-2">
-
-        <a href="https://github.com/dhanraj-hake/social-media" target="_blank">
-          <button class="btn btn-outline-secondary text-light">
-            <img src="/static/images/git2.png" alt="" width="35" height="35">
-            Source Code 
-          </button>
-        </a>
-        </div>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
@@ -46,6 +36,13 @@
           <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-success my-2 my-sm-0 mx-2" type="submit">Search</button>
         </form>
+
+        <div>
+
+          <a href="/createpost">
+            <button class="btn btn-primary my-2 my-sm-0 mx-2 ">New Post</button>
+          </a>
+          </div>
 
         <div>
 
