--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,15 @@
 
         <div>
 
+          <a href="/createpost">
+            <button class="btn btn-primary my-2 my-sm-0 mx-2 ">New Post</button>
+          </a>
+          </div>
+
+        <div>
+
+          
+
           <a href="/friends">
             <button class="btn btn- my-2 my-sm-0 mx-2 ">Friends</button>
           </a>
